fix urlbar jumping on open

--- a/userChrome.css
+++ b/userChrome.css
@@ -46,7 +46,7 @@
         --selected-entry: #DBDBDC;
         --accent: #3584E4 !important;
         --box-shadow-color: #00000040 !important;
-        --border-color: #d5d5d5;
+        --border-color: #c0c0c0;
         --tab-separator-color: #B1B1B1;
         --findbar-start: #EDEDED !important;
         --selected-bg-start: #FAFAFA !important;
@@ -258,6 +258,11 @@ tab {
 }
 
 
+/*needs to be aligned to navbar always, otherwise we can see the jump when we open it*/
+#urlbar[breakout][breakout-extend] > #urlbar-background {animation-duration: 0s !important; }
+#urlbar[breakout], #urlbar {top: 0 !important; }
+
+
 #urlbar>#urlbar-background {
     border-width: 0 !important;
     border-radius: 0 0 4px 4px !important;
@@ -265,6 +270,7 @@ tab {
 
 @media (prefers-color-scheme: dark) {
     #urlbar>#urlbar-background {
+        clip-path: inset(0px -30px -30px -30px);
         box-shadow: 0 2px 18px rgba(0, 0, 0, 0.73) !important;
         background: #25292B !important;
     }
@@ -272,6 +278,7 @@ tab {
 
 @media (prefers-color-scheme: light) {
     #urlbar>#urlbar-background {
+        clip-path: inset(0px -30px -30px -30px);
         box-shadow: 0 2px 16px rgba(0, 0, 0, 0.33) !important;
     }
 }
